@@ -1,6 +1,10 @@
 Changelog
 =========
 
+- Added SelectColumn with vocabulary definition. For correct operation
+  needs DataGridField 1.7+ but won't fail if there is older version.
+  [naro]
+
 1.0 - Unreleased
 ----------------
 
